# media_aluno

./: pyproject.toml
media_escolar/: manage.py
media_escolar/media/: models.py  serializers.py  urls.py  viewsets.py
media_escolar/media/migrations/: 0001_initial.py  0002_score_term_alter_score_unique_together.py
media_escolar/media_escolar/: asgi.py  settings.py  urls.py  wsgi.py
